# damage-calc

.github/: dependabot.yml
.github/workflows/: desktop-ci.yml  desktop-release.yml  update.yml  upstream-sync.yml
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/homebrew/: pkmn-dmg-calc.rb.template
desktop/runtime/: desktop.js
desktop/scripts/: next-version.mjs  prepare-desktop.mjs  set-version.mjs  validate-release.mjs  verify-update-feed.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/tests/: prepare-desktop.test.mjs
desktop/theme/: desktop.css
import/src/: set-import.ts
src/js/data/sets/: gen5.js  gen6.js  gen9.js
